[package]
name = "cleasy"
version = "1.1.0"
edition = "2021"
license = "MIT"
description= "Making command-line interfaces in Rust easy."
homepage = "https://github.com/iamtheblackunicorn/cleasy"
repository = "https://github.com/iamtheblackunicorn/cleasy"
documentation = "https://github.com/iamtheblackunicorn/cleasy"
readme = "README.markdown"
keywords = [
	"argument",
	"cli",
	"arg",
	"parser",
]
categories = ["command-line-interface"]
exclude = ["/.github"]
